# openenv

./: .dockerignore  .gitignore  .tmp-index-script.js  Dockerfile  PHASE2_PREFLIGHT_REPORT.md  README.md  README_backup.md  analysis.py  api.py  env.py  execution_engine.py  grader.py  index.html  inference.py  llm_manager.py  models.py  openenv.yaml  optimization_engine.py  pipeline.py  pyproject.toml  repair_engine.py  requirements.txt  tasks.py  test_integration.py  validate_openenv.py
app/: __init__.py  grader.py
app/core/: __init__.py  rl_env.py
data/: code_intelligence_dataset_100.json
intelligent_code_eval_openenv.egg-info/: PKG-INFO
server/: app.py  graders.py
tests/: e2e_multilang_check.py  final_matrix_check.py  test_smoke.py  trace_requirement_flow.py
your/: __init__.py
your/grader/: __init__.py  module.py
